<resources>
    <string name="app_name">Loopie</string>
    <string name="inputEmail">Login</string>
    <string name="inputPassword">Password</string>
    <string name="signIn">Sign In</string>
    <string name="registration">Log In</string>
    <string name="registratePassword">Password</string>
    <string name="registrateEmail">Email</string>
    <string name="regName">Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="waiting">Wait please...</string>
    <string name="passwordCriteria">Password need consist more than 6 symbols</string>
    <string name="passwordEmailWarning">U can\'t registrated with this password or email</string>
    <string name="photoBad">Photo is not chosen</string>
    <string name="error">Error)</string>
    <string name="ddd">Wait...</string>
    <string name="someIsWrong">Something gone is wrong</string>
    <string name="notPassOrEmail">U didn\'t enter password or email</string>
    <string name="updated">Updated)</string>
    <string name="genderFemale">Female</string>
    <string name="genderMale">Male</string>

    <string-array name="filter_item">
        <item>Sport</item>
        <item>Date</item>
        <item>Party</item>
        <item>Own</item>
    </string-array>


</resources>
